--- a/DoAnLapTrinhWeb/DoAnLapTrinhWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DoAnLapTrinhWeb/DoAnLapTrinhWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -41,11 +41,12 @@
                         <label asp-for="Input.Email">Email</label>
                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3">
+                    @* <div class="form-floating mb-3">
                         <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-control form-control-sm">
                             <option disabled selected>- Select Role -</option>
                         </select>
-                    </div>
+                    </div> *@
+                    <input type="hidden" asp-for="Input.Role" class="control-label" value="Customer" />
                     <!-- Trường age -->
                     <div class="form-floating mb-3">
                         <input asp-for="Input.Age" class="form-control form-control-sm" autocomplete="Age" aria-required="true" placeholder="age" />
